20.apr (ws)
      - fix: Some issues with time sigs (patch from Miwarre)
19.apr (ws)
      - delay update of bsp tree
      - fix #10310: Dot of dotted note cannot be made invisible
      - fixes for pre 2.0 score compatibility
18.apr (ws)
      - enable 128th note entry
      - fix #10261: playback cursor does not follow repeat
      - fix #10282: Undo Beam Properties change causes crash
16.apr (ws)
      - fix #10264: Select a flag and enter a note causes crash
      - dont save omr information in *.mscx file type
15.apr (ws)
      - replace obsolete QDirModel with QFileSstemModel
      - switch off unused synthesizers (reducing cpu load)
      - enable edit mode for time signatures ("nudging")
14.apr (ws)
      - fix #10241: Inserted barline is missing
      - fix #10048: Opening Page Settings causes crash
      - fix #10247: Closing score after playback causes crash
      - fix #10244: EditTextStyles dlg does not keep "Size follows space unit"
        setting (patch from Miwarre)
      - fix #10245: Right-click Text Properties dlg box does not keep "Size follows
        space unit" setting (patch from Miwarre)
13.apr (ws)
      - fix crash when creating new score from template
      - new section break property: "start new section with long instrument names"
      - allow for different time signatures for every staff
12.apr (ws)
      - fix #2299: Bar line appears on every note of selected measure
      - fix layout of mid measure barlines
      - add "style" to note context menu (test for #2217)
      - implemented "small" attribute for accidentals
       (la)
      - don't print blue frame around selected image
11.apr (ws)
      - fix #7814:  error with single-line-staff percussion notation
      - fix #10050: Closing a score with part opened causes crash
      - fix #10062: Part with multiple instruments messes lyric position
      - fix #10109: Crash on loading 1.0 score with BOTH lyrics AND parts