@@ -382,7 +382,7 @@ Fraction Duration::fraction() const
             case V_BREVE:     z = 2; n = 1; break;
             case V_LONG:      z = 4; n = 1; break;
             case V_ZERO:      z = 0; n = 1; break;
-            default:          n = 0;        break;
+            default:          z = 0; n = 0; break;    // zero+invalid fraction
             }
       Fraction a(z, n);
       for (int i = 0; i < _dots; ++i) {
